# ssd

./: Dockerfile  README.MD  cloudbuild.sh  cloudbuild.yaml  package.xml  setup.cfg  setup.py
.github/workflows/: build.yaml
ssd/: ssd.py
