<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssd</name>
  <version>0.0.0</version>
  <description>Single Shot Detection (SSD) discretizes the output space of bounding boxes into a set of default boxes over different 
  aspect ratios and scales per feature map location. At prediction time, the network generates scores for the presence of each 
  object category in each default box and produces adjustments to the box to better match the object shape.</description>
  <maintainer email="support@shaderobotics.com">Shade Robotics</maintainer>
  <license>apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend></depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
